# global_resource_management_lite

./: README.md  README_zh.md  bundle.json
frameworks/resmgr/: BUILD.gn
frameworks/resmgr/include/: global.h  hap_manager.h  hap_resource.h  res_config.h  res_locale.h
frameworks/resmgr/include/utils/: keyed_vector.h  log.h  shared_buffer.h  sorted_vector.h  string.h  type_helpers.h  vector.h  vector_impl.h
frameworks/resmgr/src/: global.cpp  hap_manager.cpp  locale_matcher.cpp  res_config_impl.cpp  res_locale.cpp
frameworks/resmgr/test/: BUILD.gn
frameworks/resmgr/test/unittest/lite/common/: hap_manager_test.cpp  hap_parser_test.cpp  locale_info_test.cpp  locale_matcher_test.cpp  res_locale_test.h  resource_manager_performance_test.cpp  resource_manager_test.cpp  string_utils_test.cpp  test_main.cpp
frameworks/resmgr_lite/: BUILD.gn  CMakeLists.txt
frameworks/resmgr_lite/include/: global_utils.h  hap_manager.h  hap_parser.h  hap_resource.h  locale_matcher.h  lock.h  res_common.h  res_config.h  res_config_impl.h  res_desc.h  res_locale.h  resource_manager.h  resource_manager_impl.h
frameworks/resmgr_lite/include/utils/: date_utils.h  utils.h
frameworks/resmgr_lite/src/: global.c  global.cpp  global_utils.c  hap_manager.cpp  hap_resource.cpp  locale_matcher.cpp  lock.cpp  res_config_impl.cpp  res_desc.cpp  res_locale.cpp  resource_manager_impl.cpp
frameworks/resmgr_lite/src/utils/: hap_parser.cpp  utils.cpp
frameworks/resmgr_lite/test/: BUILD.gn
frameworks/resmgr_lite/test/unittest/lite/common/: global_test.cpp  global_test.h  hap_manager_test.cpp  hap_manager_test.h  hap_parser_test.cpp  hap_parser_test.h  hap_resource_test.cpp  hap_resource_test.h  locale_info_test.cpp  locale_info_test.h  locale_matcher_test.cpp  locale_matcher_test.h  res_config_impl_test.cpp  res_config_impl_test.h  res_config_test.cpp  res_config_test.h  res_desc_test.cpp  res_desc_test.h  res_locale_test.cpp  resource_manager_performance_test.cpp  (+6 more)
interfaces/innerkits/include/: res_config.h
