# Copyright (c) 2020-2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/lite/config/component/lite_component.gni")

shared_library("global_resmgr_small") {
    sources = [
        "src/global.cpp",
        "src/hap_manager.cpp",
        "src/hap_resource.cpp",
        "src/likely_subtags_key_data.cpp",
        "src/likely_subtags_value_data.cpp",
        "src/locale_matcher.cpp",
        "src/lock.cpp",
        "src/res_config_impl.cpp",
        "src/res_desc.cpp",
        "src/res_locale.cpp",
        "src/resource_manager_impl.cpp",
        "src/utils/hap_parser.cpp",
        "src/utils/string_utils.cpp",
        "src/utils/utils.cpp",
    ]

    include_dirs = [
        "include",
        "//third_party/zlib",
        "//third_party/zlib/contrib/minizip",
        "//utils/native/lite/include",
        "//utils/native/lite/memory",
        "//third_party/bounds_checking_function/include",
        "//base/global/i18n_lite/interfaces/kits/i18n/include/",
    ]
    public_deps = [
        "//build/lite/config/component/zlib:zlib_shared",
        "//third_party/bounds_checking_function:libsec_shared",
        "//base/global/i18n_lite/frameworks/i18n:global_i18n",
        "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_shared",
    ]

}

lite_component("global_manager_lite") {
    features = [
        ":global_resmgr",
    ]
}
